# learnbotics

./: README.md
devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
devel/lib/pkgconfig/: dynamixel.pc  progs_modelo.pc  progs_ros.pc
devel/share/dynamixel/cmake/: dynamixelConfig.cmake
devel/share/progs_modelo/cmake/: progs_modeloConfig.cmake
devel/share/progs_ros/cmake/: progs_rosConfig.cmake
src/dynamixel/: CMakeLists.txt  package.xml
src/integracao/: desafio_final.py
src/integracao/config_dynamixel/: controller_manager.launch
src/progs_modelo/: CMakeLists.txt  package.xml
src/progs_modelo/scripts/: cinematica_1.py
src/progs_ros/: CMakeLists.txt
src/progs_ros/scripts/: publisher.py  subscriber.py
stl/: Capa.STL  Chassi1.STL  Chassi2.STL  Chassi3.STL  Empurrabola.STL.STL  Esfera 15mm.STL  Roda_learn.STL  Segurabola.STL  SuportDyn1.STL  Suport_Dyn2.STL
